[master] 'list environments' handle
