# internal/api/server/velez_api/control_plane_api.pb.gw.go
@@ -137,6 +137,33 @@ func local_request_ControlPlaneAPI_ListPlugins_0(ctx context.Context, marshaler 
 	return msg, metadata, err
 }
 
+func request_ControlPlaneAPI_ListEnvironments_0(ctx context.Context, marshaler runtime.Marshaler, client ControlPlaneAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ListEnvironments_Request
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	msg, err := client.ListEnvironments(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_ControlPlaneAPI_ListEnvironments_0(ctx context.Context, marshaler runtime.Marshaler, server ControlPlaneAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq ListEnvironments_Request
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.ListEnvironments(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 // RegisterControlPlaneAPIHandlerServer registers the http handlers for service ControlPlaneAPI to "mux".
 // UnaryRPC     :call ControlPlaneAPIServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -222,6 +249,26 @@ func RegisterControlPlaneAPIHandlerServer(ctx context.Context, mux *runtime.Serv
 			return
 		}
 		forward_ControlPlaneAPI_ListPlugins_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodPost, pattern_ControlPlaneAPI_ListEnvironments_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/velez_api.ControlPlaneAPI/ListEnvironments", runtime.WithHTTPPathPattern("/api/control_plane/environments/list"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_ControlPlaneAPI_ListEnvironments_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_ControlPlaneAPI_ListEnvironments_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -331,19 +378,38 @@ func RegisterControlPlaneAPIHandlerClient(ctx context.Context, mux *runtime.Serv
 		}
 		forward_ControlPlaneAPI_ListPlugins_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_ControlPlaneAPI_ListEnvironments_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/velez_api.ControlPlaneAPI/ListEnvironments", runtime.WithHTTPPathPattern("/api/control_plane/environments/list"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_ControlPlaneAPI_ListEnvironments_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_ControlPlaneAPI_ListEnvironments_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
 var (
-	pattern_ControlPlaneAPI_EnablePlugin_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "control_plane", "plugin", "enable"}, ""))
-	pattern_ControlPlaneAPI_ConnectSlave_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "control_plane", "slave", "connect"}, ""))
-	pattern_ControlPlaneAPI_ListNodes_0    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "control_plane", "nodes", "list"}, ""))
-	pattern_ControlPlaneAPI_ListPlugins_0  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "control_plane", "plugins"}, ""))
+	pattern_ControlPlaneAPI_EnablePlugin_0     = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "control_plane", "plugin", "enable"}, ""))
+	pattern_ControlPlaneAPI_ConnectSlave_0     = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "control_plane", "slave", "connect"}, ""))
+	pattern_ControlPlaneAPI_ListNodes_0        = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "control_plane", "nodes", "list"}, ""))
+	pattern_ControlPlaneAPI_ListPlugins_0      = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "control_plane", "plugins"}, ""))
+	pattern_ControlPlaneAPI_ListEnvironments_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "control_plane", "environments", "list"}, ""))
 )
 
 var (
-	forward_ControlPlaneAPI_EnablePlugin_0 = runtime.ForwardResponseMessage
-	forward_ControlPlaneAPI_ConnectSlave_0 = runtime.ForwardResponseMessage
-	forward_ControlPlaneAPI_ListNodes_0    = runtime.ForwardResponseMessage
-	forward_ControlPlaneAPI_ListPlugins_0  = runtime.ForwardResponseMessage
+	forward_ControlPlaneAPI_EnablePlugin_0     = runtime.ForwardResponseMessage
+	forward_ControlPlaneAPI_ConnectSlave_0     = runtime.ForwardResponseMessage
+	forward_ControlPlaneAPI_ListNodes_0        = runtime.ForwardResponseMessage
+	forward_ControlPlaneAPI_ListPlugins_0      = runtime.ForwardResponseMessage
+	forward_ControlPlaneAPI_ListEnvironments_0 = runtime.ForwardResponseMessage
 )
