# pkg/docs/swaggers/control_plane_api.swagger.json
@@ -16,6 +16,38 @@
     "application/json"
   ],
   "paths": {
+    "/api/control_plane/environments/list": {
+      "post": {
+        "operationId": "ControlPlaneAPI_ListEnvironments",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/velez_apiListEnvironmentsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/googleRpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/velez_apiListEnvironmentsRequest"
+            }
+          }
+        ],
+        "tags": [
+          "ControlPlaneAPI"
+        ]
+      }
+    },
     "/api/control_plane/nodes/list": {
       "post": {
         "operationId": "ControlPlaneAPI_ListNodes",
@@ -244,6 +276,20 @@
         "exposeToPort": {
           "type": "string",
           "format": "uint64"
+        }
+      }
+    },
+    "velez_apiListEnvironmentsRequest": {
+      "type": "object"
+    },
+    "velez_apiListEnvironmentsResponse": {
+      "type": "object",
+      "properties": {
+        "environments": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       }
     },
